# vala-panel-appmenu

./: .bzrignore  .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  install_ubuntu_deps  libtool  meson.build  meson_options.txt  vala-panel-appmenu.kdev4
applets/: CMakeLists.txt  budgie-plugin-appmenu.vala  mate-plugin-appmenu.vala  meson.build  valapanel-plugin-appmenu.vala  xfce4-plugin-appmenu.vala
appmenu-gtk-module/: AUTHORS  (+4 more)
core/: CMakeLists.txt  menu-widget.vala
data/: .gitignore  80unity-gtk-module  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  appmenu-budgie.desktop.plugin.in  appmenu-mate.desktop.in  appmenu-mate.desktop.plugin.in  appmenu-mate.plugin.desktop.in  appmenu-mate.service.in  appmenu.desktop.in  appmenu.desktop.plugin.in  appmenu.desktop.plugin.in.cmake  com.canonical.Unity.GtkModule.gschema.xml  meson.build  org.valapanel.appmenu.gschema.xml  unity-gtk-module.conf  unity-gtk-module.pc.in  unity-gtk-module.service  unity-gtk2-module.pc.in  unity-gtk2-parser.pc.in  unity-gtk3-module.pc.in  unity-gtk3-parser.pc.in
data/overrides/: org.gnome.Evince.ui
data/valapanel/: CMakeLists.txt  appmenu.desktop.plugin.in
data/xfce/: CMakeLists.txt  appmenu.desktop.xfce.in
demos/: Makefile  Makefile.am  Makefile.in  black.c  client.c  menusource.c
demos/.deps/: altgrabber.Po  altmonitor.Po  black-black.Po  client.Po  menusource.Po
jayatana/: CMakeLists.txt
jayatana/java/: CMakeLists.txt
jayatana/java/agent/: Agent.java  Agent.java.in
jayatana/java/core/: Feature.java  FeatureManager.java  FeatureWrapper.java
jayatana/lib/: CMakeLists.txt  com_jarego_jayatana_Agent.c  com_jarego_jayatana_Agent.h  com_jarego_jayatana_basic_GMainLoop.c  com_jarego_jayatana_basic_GlobalMenu.c  com_jarego_jayatana_collections.c  com_jarego_jayatana_collections.h  com_jarego_jayatana_jkey2xkey.c  com_jarego_jayatana_jkey2xkey.h  com_jarego_jayatana_jni.c  com_jarego_jayatana_jni.h  config.h.in
lib/: CMakeLists.txt  Makefile.am  appmenu-abstractions.vala  appmenu-backend.vala  appmenu-bamf.vala  appmenu-dbus.vala  appmenu-desktop.vala  appmenu-wnck.vala  appmenu.css  budgie-plugin-appmenu.vala  dbus-menu-importer.vapi  dbusmenu.vala  desktop-menus.ui  helper-dbus.vala  helper-dbusmenu.vala  helper-desktop.vala  helper-menumodel.vala  launcher.c  launcher.h  launcher.vapi  libappmenu.gresource.xml  libwnck-aux.c  libwnck-aux.h  matcher.c  matcher.h  matcher.vapi  mate-plugin-appmenu.vala  menu-widget-dbusmenu.vala  menu-widget-helpers.vala  menu-widget-importer.vala  menu-widget-menumodel.vala  menu-widget.vala  menubar.vala  meson.build  registrar-new.vala  registrar.vala  unity-gtk-action-group-private.h  unity-gtk-action-group.c  unity-gtk-action-group.h  unity-gtk-action-private.h  (+11 more)
lib/c-lib/: launcher.c
lib/dbusmenu-importer/: CMakeLists.txt  com.canonical.dbusmenu.xml  dbus-menu-importer.vapi  debug.c  debug.h  definitions.h  importer-enums.c.template  importer-enums.h.template  importer.c  importer.h  item.c  item.h  meson.build  model.c  model.h  section.c  section.h  test.c  utils.c  utils.h
registrar/: CMakeLists.txt  com.canonical.AppMenu.Registrar.xml  dbusmenu.vala  main.vala  registrar-dbusmenu.c  registrar-dbusmenu.h  registrar-main.c  registrar-main.h  registrar-marshal.list
src/: Makefile  Makefile.am  Makefile.in  enums.h  export  hello.c  main.c  test-radio.c  unity-gtk-action-group.c  unity-gtk-action-group.h  unity-gtk-action.c  unity-gtk-action.h  unity-gtk-menu-item-private.h  unity-gtk-menu-item.c  unity-gtk-menu-item.h  unity-gtk-menu-section-private.h  unity-gtk-menu-section.c  unity-gtk-menu-section.h  unity-gtk-menu-shell-private.h  unity-gtk-menu-shell.c  unity-gtk-menu-shell.h  unitygtkmenu.c  unitygtkmenu.h  unitygtkmenuparser.c  unitygtkmenuparser.h  unitygtkmenutester.c
src/.deps/: hello-hello.Po  main.Plo  unity_gtk_menu_tester-unitygtkmenutester.Po  unity_gtk_test-unitygtktest.Po  unitygtkmenuparser.Plo
subprojects/appmenu-glib-translator/: debug.c  debug.h  importer-enums.h.template  importer.c  importer.h  item-pixbuf.c  item.c  item.h  meson.build  model.c  model.h  section.c  test.c  utils.c
subprojects/appmenu-gtk-module/: CMakeLists.txt  README.md  TODO  meson.build  meson_options.txt
subprojects/appmenu-gtk-module/cmake/: FindGTK.cmake  GLibProgramHandlers.cmake
subprojects/jayatana/: AUTHORS  CMakeLists.txt  LICENSE  README.md  meson.build
subprojects/registrar/: CMakeLists.txt  config.h.in  meson.build  registrar-dbusmenu.c  registrar-dbusmenu.h  registrar-main.c  registrar-main.h  registrar-xml.c.in  version.h.in
unity-gtk-module/: CMakeLists.txt  Makefile.am  README.md  autogen.sh
unity-gtk-module/data/: CMakeLists.txt  Makefile.am  appmenu-gtk-module.service  appmenu-gtk-module.service.in  appmenu-gtk2-parser.pc.in  appmenu-gtk3-parser.pc.in  com.canonical.unity-gtk-module.gschema.xml  org.valapanel.appmenu-gtk-module.gschema.xml  unity-gtk-module.conf  unity-gtk-module.service  unity-gtk2-parser.pc.in
unity-gtk-module/debian/: changelog  control  libunity-gtk2-parser0.install  rules  unity-gtk-module-common.maintscript  unity-gtk2-module.install  unity-gtk3-module.install
unity-gtk-module/demos/: Makefile.am  altgrabber.c  altgrabber.h  altmonitor.c  black.vala  menusource.c  menusource.h  test-radio.c
unity-gtk-module/lib/: CMakeLists.txt  Makefile.am  appmenu-gtk-parser.h  unity-gtk-action-group-private.h  unity-gtk-action-group.c  unity-gtk-action-group.h  unity-gtk-action-private.h  unity-gtk-action.c  unity-gtk-menu-item-private.h  unity-gtk-menu-item.c  unity-gtk-menu-section-private.h  unity-gtk-menu-shell-private.h  unity-gtk-menu-shell.c  unity-gtk-menu-shell.h  unity-gtk-parser.h
unity-gtk-module/src/: CMakeLists.txt  Makefile.am  appmenu-gtk-module.c  blacklist.c  blacklist.h  consts.h  datastructs.c  datastructs.h  hijack.c  hijack.h  main.c  platform.c  platform.h  support.c  support.h
unity-gtk-module/tests/: Makefile.am
(+243 files in other folders)
